--- a/Plantillas sin usar/mibaul/baul.css
+++ b/Plantillas sin usar/mibaul/baul.css
@@ -8,98 +8,53 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 
 body {
-	min-width: 980px;
+	min-width: 900px;
 	max-width: 1000px;
 	height: auto;
 	margin: auto;
 	font-family: 'Open Sans', sans-serif;
     background: #fff;
+    position: relative;
 }
+
 fieldset {
-	position: absolute;
-	border: none;
-	border-bottom: 2px solid rgba(26, 188, 156, 0.7);
-	padding: 5px 5px;
-	height: auto;
-	width: 80%;
-}
-meter::-webkit-meter-bar {
-  position:relative;
-  left: 100%;
-  top: 20%;
-  margin: auto;
-  width: 300px;
-  height: 25px;
-  -webkit-appearance: none; /* Reset appearance */
-  border-radius: 3px;
-  background-image: linear-gradient(
-    90deg, 
-    #8bcf69 5%, 
-    #e6d450 5%,
-    #e6d450 15%,
-    #f28f68 15%,
-    #f28f68 55%,
-    #cf82bf 55%,
-    #fff 95%,
-    #fff 95%,
-    #fff 100%
-  );
-  background-size: 100% 100%;
- font-family: 'Open Sans', sans-serif;
- box-shadow: 0 5px 5px -5px #333 inset;
- color: tomato;
-}
-meter::-webkit-meter-bar:before {
-  content: 'Total Size';
-  position: absolute;
-  top: -100%;
-}
-meter::-webkit-meter-bar:after {
-  content: '50MB/60MB';
-  position: absolute;
-  top: -100%;
-  right: 0;
-}
-ul.option {
-	list-style-type: none;
 	position: relative;
-	float: right;
-}
-span.fontawesome-briefcase {
-	font-weight: 300;
-	font-size: 50px;
-	margin: auto;
-	padding: 0;
-	position: relative;	
-	color: tomato;
-	font-family: 'Open Sans', sans-serif;
-	left: 5%;
-} 
-ul.option li button {
-	border: none;
-	outline: none;
-	padding: 10px 10px;
-	font-size: 25px;
-	background: transparent;
-	border-radius: 20px;
-	box-shadow: 0.5px 0.5px #fff;
-	color: aquamarine;
-	cursor: pointer;
-	transition: all .3s ease-in;
-}
-ul.option li button:hover {
-	color: tomato;
-	-webkit-transform: scale(1.1);
-	-webkit-transform: rotate(180deg);
-}
-
-
-section{
-	background: #fff;
+	display: block;
 	width: 100%;
+	margin: auto;
+	height: 50px;
+	top: 60px;
+	background-color: #fff;
+	outline: none;
+	border: none;
+	 -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+
+}
+h1 {
+	position: relative;
+	display: inline-block;
+	font-family: 'Open Sans', sans-serif;
+	color: rgba(44,44,40,0.777);
+	font-weight: 100;
+	margin: auto;
+}
+fieldset img {
+	width: 55px;
+	height: 55px;
+	display: inline-block;
+	position: relative;
+	margin: auto;
+	top: 7px;
+}
+
+.contenedor{
+	background: #fff;
+	width: auto;
 	height: auto;
 	margin: auto;
-	top:20%;
+	top: 130px;
 	position: relative;
 	overflow-y: scroll;
 	overflow-x:hidden;
@@ -118,22 +73,33 @@ ul.contenido li {
 }
 ul.contenido li img {
 	width: 80px;
-	height: 80px;
-	border: 2px solid rgba(0, 0, 0, 0.1);
+	height: 107px;
+	border-radius: 1%;
 }
 ul.contenido li img:hover {
-	width: 80px;
-	height: 80px;
-	border: 2px solid tomato;
 	opacity: 0.8;
+
 }
 ul.contenido li div {
-	width: 100%;
-	background: rgba(0, 0, 0, 0.05);
-	height: 20s%;
+	width: 95%;
+	background: #fff;
+	height: 107px;
 	position: relative;
 	display: block;
 	border-bottom: 3px solid #fff;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+    -webkit-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
+     box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+     margin-bottom: 17px;
+     cursor: pointer;
+}
+.contenido li div:hover {
+	    -webkit-box-shadow: 0px 0px 8px 0px #7F9C9C;
+    -moz-box-shadow:    0px 0px 8px 0px #7F9C9C;
+     box-shadow:         0px 0px 8px 0px #7F9C9C;
 }
 ul.contenido li div a {
 	text-align: center;
@@ -143,7 +109,7 @@ ul.contenido li div a {
 	top: 20%;
 	width: 80%;
 	font-size: 20px;
-	color: grey;
+	color: rgba(44,44,44,0.777);
 	cursor: pointer;
 }
 ul.contenido li div i {
@@ -165,54 +131,8 @@ ul.contenido li div a:hover {
 	top: 20%;
 	width: 80%;
 	font-size: 20px;
-	color: tomato;
+	color: rgba(44,10,44,0.777);
 	cursor: pointer;
-}
-span.fontawesome-cloud-download {
-	position: absolute;
-	margin: auto;
-	display: inline;
-	top: 70%;
-	width: 80%;
-	font-size: 22px;
-	color: tomato;
-	cursor: pointer;
-	left: 95%;
-	transition: all .3s ease-in;
-}
-span.fontawesome-cloud-download:hover {
-	position: absolute;
-	margin: auto;
-	display: inline;
-	top: 70%;
-	width: 80%;
-	font-size: 22px;
-	color: aquamarine;
-	cursor: pointer;
-	left: 95%;
-}
-span.fontawesome-share {
-	position: absolute;
-	margin: auto;
-	display: inline;
-	top: 70%;
-	width: 80%;
-	font-size: 22px;
-	color: tomato;
-	cursor: pointer;
-	left: 90%;
-	transition: all .3s ease-in;
-}
-span.fontawesome-share:hover {
-	position: absolute;
-	margin: auto;
-	display: inline;
-	top: 70%;
-	width: 80%;
-	font-size: 22px;
-	color: black;
-	cursor: pointer;
-	left: 90%;
 }
 /* MEDIAS */
 
@@ -244,4 +164,59 @@ span.fontawesome-share:hover {
   body {
   	width: 800px;
   }
+}
+/* nav */
+.box-tool {
+  width: 1020px;
+  height: 40px;
+  background-color: #fff;
+  box-shadow: 1px 1px 1px #f0f0f0;
+  list-style-type: none;
+  position: fixed;
+  margin-top: 0px;
+  z-index: 9999;
+}
+.box-tool li:nth-child(1) {
+  position: relative;
+  margin: auto;
+  right: 0px;
+  width: 40px;
+  height: 40px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  background-repeat: no-repeat;
+  background-size: 120px;
+  background-position: center;
+  background-color: transparent;
+  border: none;
+    -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+  top: 0px;
+}
+.box-tool .chat {
+  width: 40px;
+  height: 40px;
+  background-image:url('http://s27.postimg.org/mu9viuten/1418959285_357941.png');
+  border: none;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position:center;
+  background-color: transparent;
+  margin: auto;
+  top: -40px;
+  float: right;
+  right: 37px;
+}
+.box-tool li:hover {
+   -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+    transform:scale(1.1);
+  border: none;
+  background-color: transparent;
+}
+.box-tool li img {
+  position: relative;
+  width: 120px;
+  height: 120px;
 }
