--- a/Plantillas sin usar/Mensajes privados/mb.css
+++ b/Plantillas sin usar/Mensajes privados/mb.css
@@ -240,3 +240,158 @@ i {
     color: grey;
     background-color: transparent;
 }
+span li {
+}
+.compose {
+  position: relative;
+  display: inline-block;
+  float:right;
+  top: -60px;
+  width: 48px;
+  height: 48px;
+  right: -330px;
+  cursor: pointer;
+  overflow: hidden;
+
+
+}
+#page-wrapper {
+  width: 650px;
+  top:-700px;
+  background: #FFF;
+  padding: 1em;
+  margin: 1em auto;
+  border-top: 5px solid rgba(44,44,44,0.777);;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.8);
+  opacity: 0.6;
+  border-radius: 7px;
+  cursor: move;
+  font-family: 'Open Sans', sans-serif;
+  
+  /*CENTRADO*/
+  overflow: hidden;
+  position: absolute;
+  left: 60%;
+  top: 50%;
+  margin-top: -100px;
+  margin-left: -292px; /*150px*/
+  zoom : 1;
+  z-index: 9999;
+  display: none;
+  
+}
+
+
+h1 {
+  margin-top: 0;
+}
+
+#status {
+  font-size: 13px;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.open {
+  color: green;
+}
+
+.closed {
+  color: red;
+}
+
+
+#message-form2 {
+  margin-top: 1.5rem;
+}
+
+#message2 {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #D9D9D9;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
+  min-height: 100px;
+  margin-bottom: 1rem;
+  font-family: 'Open Sans', sans-serif;
+  display: block;
+}
+
+button[type="button"] {
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 0.9rem;
+  padding: 0.6rem 1em;
+  color: white;
+  margin: 0 0.25rem;
+  text-align: center;
+  background: #FF0000;
+  border-bottom: 1px solid #999;
+}
+
+button[type="submit"] {
+  background: #7CE1FF;
+  border-bottom: 1px solid #7CE1FF;
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 0.9rem;
+  padding: 0.6rem 1em;
+  color: white;
+  margin: 0 0.25rem;
+  text-align: center;
+}
+
+button:hover {
+  opacity: 0.75;
+  cursor: pointer;
+}
+#page-wrapper:hover {
+  opacity: 1;
+  border-color: 4px solid #98EBFF;
+}
+
+.fontawesome-bullhorn {
+  font-size: 20px;
+  border:none;
+  background-color: transparent;
+  color: #94DCFF;
+  text-align: center;
+  float:right;
+  display:inline-block;
+}
+.fontawesome-bullhorn:hover {
+  background-color: white;
+
+}
+.fontawesome-camera {
+  font-size: 20px;
+  border:none;
+  background-color: transparent;
+  color: #94DCFF;
+  text-align: center;
+  float:right;
+  display:inline-block;
+  margin-right: 10px;
+
+}
+.fontawesome-camera:hover {
+  background-color: white;
+}
+.fontawesome-map-marker {
+   font-size: 20px;
+  border:none;
+  background-color: transparent;
+  color: #94DCFF;
+  text-align: center;
+  float:right;
+  display:inline-block;
+  margin-right: 10px;
+
+
+}
+.fontawesome-map-maker {
+  background-color: white;
+}
