--- a/Plantillas sin usar./novedades/main.css
+++ b/Plantillas sin usar./novedades/main.css
@@ -15,17 +15,17 @@ body, html {
 body {
 	font-family: 'Open Sans', sans-serif;
 	color: #aaaeb2;
-	background: #f1f1f1;
+	background: #fcfcfc;
 }
 
 a {
 	color: #888;
 	text-decoration: none;
 }
-h2 {
+h3 {
     border-bottom: 1px solid #DDDDDD;
-    color: #666666;
-    font-family: 'Cherry Swash',cursive;
+    color: rgba(44,44,44,0.777);
+    font-family: 'Open Sans', sans-serif;
     font-size: 43px;
     padding-bottom: 13px;
     text-align: center;
@@ -127,22 +127,26 @@ figcaption span {
 	position: relative;
 	display: block;
 	margin: auto;
-	width: 400px;
+	width: 390px;
 	height: auto;
 	background-color: #fff;
 	border-radius: 7px;
-	box-shadow: 1px 1px solid grey;
+	-webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+     box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.75);
 }
-.comm h4 {
+.comm h5 {
 	text-align: center;
 	position: relative;
-	top: -35px;
+	top: -45px;
 	border-bottom: 1px solid grey;
 	width: auto;
+	margin-bottom: 7px;
 }
 .comm span {
 	position: relative;
 	top: -30px;
+	font-size: 13px;
 }
 .comm .img {
 	position: relative;
@@ -152,7 +156,7 @@ figcaption span {
 	width: 70px;
 	height: 70px;
 	border-radius: 100%;
-	border: 2px solid tomato;
+	border: 2px solid rgba(44,44,44,0.777);
 	position: relative;
 	top: -20px;
 	margin: auto;
@@ -253,5 +257,124 @@ figcaption span {
 .caption:not(:hover)  {
 	opacity: 0.4;
 }
-
-
+#video {
+	position: relative;
+	display: inline;
+	width: 240px;
+	height: 260px;
+	top: -47px;
+	outline: none;
+}
+/* nav */
+.box-tool {
+  width: 100%;
+  height: 40px;
+  background-color: #fff;
+  box-shadow: 1px 1px 1px #f0f0f0;
+  list-style-type: none;
+  position: fixed;
+  margin-top: -40px;
+  z-index: 9999;
+}
+.box-tool li:nth-child(1) {
+  position: relative;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  background-repeat: no-repeat;
+  background-size: 120px;
+  background-position: center;
+  background-color: transparent;
+  border: none;
+    -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+  top: 0px;
+}
+.box-tool .chat {
+  width: 40px;
+  height: 40px;
+  background-image:url('http://s27.postimg.org/mu9viuten/1418959285_357941.png');
+  border: none;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position:center;
+  background-color: transparent;
+  margin: auto;
+  top: -40px;
+  float: right;
+  right: 20px;
+}
+.box-tool li:hover {
+   -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+    transform:scale(1.1);
+  border: none;
+  background-color: transparent;
+}
+.box-tool li img {
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+.opciones {
+	display: block;
+	position: absolute;
+	margin: auto;
+	float: right;
+	right: 0;
+	top: 60px;
+}
+.opciones ul {
+	list-style-type: none;
+}
+.opciones li {
+	display: inline-block;
+}
+.popular {
+	background-image: url("images/heart.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
+	cursor: pointer;
+}
+.actividad {
+    background-image: url("images/friends.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
+	cursor: pointer;
+}
+.descubre {
+	 background-image: url("images/find.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
+	cursor: pointer;
+}
+.novedades {
+    background-image: url("images/new.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
+	cursor: pointer;
+}
+.opciones li:hover {
+	-webkit-trasnform: scale(1.07);
+	-moz-transform: scale(1.07);
+	transform: scale(1.07);
+}
