--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -13,7 +13,7 @@
 }
 html {
 	font-family: 'Open Sans', sans-serif;
-	min-height:100%;
+	 min-height:100%;
 }
 
 * {
@@ -23,7 +23,7 @@ html {
 
 .container {
   *zoom: 1;
-  max-width: 960px;
+  max-width: 980px;
   margin-left: auto;
   margin-right: auto; }
   .container:before, .container:after {
@@ -41,7 +41,7 @@ html {
       clear: both; }
 
 body > .container {
-  margin-top: 1em;
+  margin-top: 7em;
   margin-bottom: 1em; }
   @media only screen and (min-width: 641px) and (max-width: 959px) {
     body > .container {
@@ -498,7 +498,7 @@ body > .container {
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem; }
   .stock .stock-chart #chart {
-    height: 10.7em;
+    height: 19.7em;
     background: url(http://i.imgbox.com/abmuNQx2) center bottom no-repeat; }
 .stock .current-price {
   background: #1d2122;
@@ -943,7 +943,7 @@ body > .container {
 
 html, body {
   font: 0.9em/1.2 "Proxima Nova", "Helvetica Neue", Arial;
-  background: #d3d4d5;
+  background: #E4E4E4;
   color: #46494c;
   height: 100%;
   padding: 0;
@@ -1121,17 +1121,36 @@ ul.table > li {
 
 .illustration {
   padding: 0.1em 1em; }
-  
-nav.barrah {
-height: 50px;
-margin: 0px;
-width: 100%;
-position: fixed;
-display: block;
-background: #3E9397;
-opacity: 0.8;
-top: 3px;
-z-index: 9999;
+
+.box-tool {
+  width: 100%;
+  height: 40px;
+  background-color: #fff;
+  box-shadow: 1px 1px 1px #f0f0f0;
+  list-style-type: none;
+  position: fixed;
+  top: 0px;
+  z-index: 9999;
+  margin-bottom: 200px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 120px;
+}
+.box-tool .logo {
+  position: fixed;
+  margin: auto;
+  text-align: center;
+  left: 50%;
+  padding: 0;
+  top: -280px;
+}
+.box-tool img {
+  width:: 120px;
+  height: 120px;
+  top: 0px;
+  cursor: pointer;
+  position: fixed;
 }
 
 
@@ -1434,7 +1453,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   background: #FFF;
   padding: 1em;
   margin: 1em auto;
-  border-top: 5px solid #94DCFF;
+  border-top: 5px solid rgba(44,44,44,0.777);
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
   opacity: 0.6;
   position:relative;
@@ -1529,7 +1548,7 @@ button:hover {
   font-size: 20px;
   border:none;
   background-color: transparent;
-  color: #94DCFF;
+  color: rgba(44,44,44,0.777);
   text-align: center;
   float:right;
   display:inline-block;
@@ -1542,7 +1561,7 @@ button:hover {
   font-size: 20px;
   border:none;
   background-color: transparent;
-  color: #94DCFF;
+  color: rgba(44,44,44,0.777);
   text-align: center;
   float:right;
   display:inline-block;
@@ -1556,7 +1575,7 @@ button:hover {
    font-size: 20px;
   border:none;
   background-color: transparent;
-  color: #94DCFF;
+  color: rgba(44,44,44,0.777);
   text-align: center;
   float:right;
   display:inline-block;
