--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -7,8 +7,7 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/widget1.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/conf.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" />
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
@@ -26,6 +25,7 @@
 <script src="{{STATIC_URL}}js/notia.js"></script>
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
 <script src="{{STATIC_URL}}js/drag.js"></script>
+
 
 
 <!-- NEW MENU -->
@@ -124,9 +124,8 @@ top.window.outerWidth = screen.availWidth;
 </head>
 
 <body>
-<body>
 <!-- <div id="oHBContainer"> -->
-<nav class="barrah">
+<nav class="box-tool">
 <ul>
 <!-- Segundo menu bola <li><button type="button" id="Menu">
   
@@ -139,34 +138,27 @@ top.window.outerWidth = screen.availWidth;
 <li><div class="field" id="searchform">
   	<!--<input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />-->
   	<!--<button type="submit" class="btn">¡Buscar!</button>-->
-
+     
 	<form method='post' action='/search/'>{% csrf_token %}
 
 		{{searchForm}}
 		<!--<button type="submit" class="btn" onclick="javascript:window.location.href='/search'">¡Buscar!</button>-->
-		<button type="submit" id="btn-search" class="btn">¡Buscar!</button>
-                  
+
 	</form>
 	
 
-  	</div></li></li></ul>
+  	</div>
+  	</li>
+  	</li>
+  	<li class="fa fa-comment fa-lg"></li>
+<div class="notifications"><li class="fa fa-bell fa-lg"><em>2</em></li></div>
+<li class="fa fa-bars fa-lg"></li>
+  	<li>
+  	</ul>
 
   	{% if showPerfilButtons or user.username == user_profile.username %}
 
 
-  		<div id ="box-tool">
-<span class="fontawesome-comment-alt"></span>
-
-	  		<div class="notifications">
-  <span class="fontawesome-bell"><label class="count">3</label></span>
-  <div class="messages">
-    <a href="#" class="message"><span class="fontawesome-heart-empty">Has recibido 1 me gusta.</span></a>
-    <a href="#" class="message"><span class="fontawesome-user">Fernando ha empezado a seguirte.</span></a>
-    <a href="#" class="message"><span class="fontawesome-coffee">Quiere tomar algo contigo.</span></a>
-  </div>
-</div>
-
-	  	</div>
 
 
   	{% endif %}
@@ -175,7 +167,6 @@ top.window.outerWidth = screen.availWidth;
 
 {% block content %}{% endblock %}
 
-</body>
 </body>
 
 <footer class="container">
