--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -1,70 +1,63 @@
-@import url('font-awesome.css');
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-@import url(http://fonts.googleapis.com/css?family=Gafata);
-@import url(http://fonts.googleapis.com/css?family=Lato:400,300);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(http://fonts.googleapis.com/css?family=PT+Sans);
+            body {
+                       padding: 0;
+                       margin: auto;
+                       background-image: url('http://www.fotosdeciudades.com/Imagenes/noria-london-eye.jpg');
+                       background-size: 100%;
+                       background-repeat: no-repeat;
+}
 
-/*
-body {
-                background: #563c55 url({{STATIC_URL}}img/6.jpg) no-repeat center top !important;
-                -webkit-background-size: cover;
-                -moz-background-size: cover;
-                background-size: cover;
-}
-*/
-
-/* entypo */
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
-span.cabezal {
-font-size: 70px;
-}
-#container {
-	height: 100%;   
-    position: relative; 
-}
-#header {
-  position: fixed;
-  width: 95%;
-  text-align: center;
-  font-size: 72px;
-  line-height: 108px;
-  height: 108px;
-  background: #fff;
-  color: grey;
+header {
+  position: absolute;
+  height: 40px;
+  width: 100%;
+  background-color: rgba(44,44,44,0.854);
   font-family: 'PT Sans', sans-serif;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  margin-top: -50px;
+  top: 0;
 }
-#footer {
-    position: fixed;
-    bottom: 0;
-    font-family: 'PT Sans', sans-serif;
-    text-align: center;
-    background: white;
-    opacity: 0.8;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    margin-top: 70px;
-    padding: 10px;
-    width: 95%;
-    height: auto;
-}
-ul{
-  position: relative;
+.logo img {
+  width: 120px;
+  height: 120px;
+  position: absolute;
   margin: auto;
-  list-style-type: none;
-
+  vertical-align: middle;
+  top: -40px;
+  left: 150px;
 }
-li {
-  color: #000;;
+header h5 {
   position: relative;
-  margin: auto 20px;
-  display: inline;
-  font-weight: 400;
+  left: 80px;
+  font-size: 25px;
+  text-decoration: none;
+  color: grey;
+  letter-spacing: 0.5px;
+  display: inline-block;
+  top: 0px;
+}
+header i {
+  text-decoration: none;
+  font-style: normal;
+  color: #416D98;
+  text-shadow: 0.2px 0.2px 0.5px #fff;
+}
+footer {
+  width: 100%;
+  background-color: rgba(44,44,44,0.854);
+  position: fixed;
+  height: 40px;
+  bottom: 0;
+}
+footer li {
+  display: inline-block;
+  margin-right: 20px;
+  list-style-type: none;
+  text-align: center;
+  text-decoration: none;
+  color: grey;
+  font-size: 16px;
+  position: relative;
+  left: 30%;
+  margin-left: 60px;
 }
 div.Register {
     position: relative;
