--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -151,7 +151,17 @@ top.window.outerWidth = screen.availWidth;
   	</li>
   	</li>
   	<li class="fa fa-comment fa-lg"></li>
-<div class="notifications"><li class="fa fa-bell fa-lg"><em>2</em></li></div>
+<div class="notifications">
+  <li class="fa fa-bell fa-lg"><em>2</em></li>
+  <div id="notification">
+    <ul class="not">
+      <li><h4>Notificaciones</h4>
+      </li>
+      <li><i class="fa fa-heart fa-lg">A rocio le gusta tu comentario.</i></li>
+      <li></li>
+  </ul>
+  </div>
+</div>
 <li class="fa fa-bars fa-lg"></li>
   	<li>
   	</ul>
