--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -151,14 +151,16 @@ top.window.outerWidth = screen.availWidth;
   	</li>
   	</li>
   	<li class="fa fa-comment fa-lg"></li>
-<div class="notifications">
+<div class="notificationss">
   <li class="fa fa-bell fa-lg"><em>2</em></li>
-  <div id="notification">
+  <div id="notificationn">
     <ul class="not">
       <li><h4>Notificaciones</h4>
       </li>
-      <li><i class="fa fa-heart fa-lg">A rocio le gusta tu comentario.</i></li>
-      <li></li>
+      <li><i class="fa fa-heart fa-lg" id="love"><a>A rocio le gusta tu comentario.</a></i></li>
+      <li><i class="fa fa-user fa-lg"><a>Pepe ha comenzado a seguirte.</a></i></li>
+      <li><i class="fa fa-paper-plane-o fa-lg"><a>Pedro te ha enviado un mensaje.</a></i></li>
+      <li><h5>View all notification</h5></li>
   </ul>
   </div>
 </div>
