--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1180,7 +1180,7 @@ ul.table > li {
  color: rgba(44,44,44,0.666);
  font-size: 25px;
  position: relative;
- display: block;
+ display: inline-block;
  margin-left: 350px;
  text-shadow: grey 1px 1px 1px;
  margin-top: 7px;
@@ -1977,4 +1977,22 @@ opacity: 0.7;
 border-top-left-radius: 7px;
 border-top-right-radius: 7px;
 cursor: pointer;
+}
+@media only screen and (max-width: 640px) {
+    .aboutuser {
+          left: 300px;
+          top: 170px;
+    }
+
+}
+@media only screen and (min-width: 641px) and (max-width: 959px) {
+      .aboutuser {
+          left: 270px;
+          top: 147px;
+    }
+}
+@media only screen and (max-width: 640px) {
+  .box-tool {
+    background-image: none;
+  }
 }
