--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -155,9 +155,9 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
     <li class="estado">Feliz</li>
     </ul>
   <ul class="controls">
-    <li class="fa fa-heart fa-2x"><i></li>
+    <li class="fa fa-heart fa-2x" onclick=AJAX_likeprofile('abort')><i></li>
     <li class="fa fa-reply fa-2x"></li>
-    <li class="fa fa-plus fa-2x"></li> 
+    <li class="fa fa-plus fa-2x" onclick=AJAX_requestfriend('abort')></li> 
   </ul>
   </div>
   </li>
