mostrar panel de configuracion de perfil al pulsar

--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -46,7 +46,7 @@
 <div id="toggle">
   <nav class="menup">
     <li class="profilee"><img src="http://el-cine-en-rosa.blogs.diezminutos.es/files/2014/11/jennifer-lawrence-cine-en-rosa.jpg"><i>{{user_profile.username}}</i></li>
-    <li><i class="fa fa-cog fa-lg"></i> Configuracion</li>
+    <li><i class="fa fa-cog fa-lg"></i><a href="/config/profile">Configuracion</a></li>
     <li><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
     <li><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
     <li><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
