Mejora subida de avatar

--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -177,7 +177,7 @@
 <h6 id="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
 -->
 </form>
-<form id="float">
+<!-- <form id="float">--> <!-- NO PUEDE HABER UN FORM DENTRO DE OTRO FORM, YA QUE ENTONCES EL FORM NO FUNCIONA CORRECTAMENTE -->
 	{% block cf-form %}{% endblock %}
 <!--
 Contraseña actual <input class="actual" type="password" name="Contraseña actual." value="actual"><br>
@@ -187,7 +187,7 @@ Verificar contraseña <input class="actual" type="password" name="Repita su nuev
 <p id="lost"><a href="/"> ¿Olvidaste tu contraseña?</a> </p>
 -->
 
-</form>
+<!--  </form> -->
 </section>
 </body>
 </header>
